# RBF

./: .gitattributes  .gitignore  DEPENDENCIES.txt  LICENSE.txt  MANIFEST.in  README.md  README.rst  TODO  TODO.txt  environment.yml  index.html  make_cython_extensions.py  make_version.py  params.json  pyproject.toml  readthedocs.yml  release.sh  requirements.txt  setup.cfg  setup.py
conda.recipe/: conda_build_config.yaml  meta.yaml  run_test.py
demo/: README.rst  demo_basis.py  demo_fd.py  demo_fd_annulus.py  demo_fd_annulus_with_ghosts.py  demo_fd_laplacian.py  demo_interpolate.py  demo_interpolate_1d.py  demo_nodes.py  demo_nodes_annulus.py  demo_spectral_laplacian.py  demo_stencil_size.py  weighttest.py
demo/basis/: basis.py  demo_basis.py
demo/filter/: diff1d.py  filter1d.py  filter2d.py  filter_lena.py
docs/: Makefile  requirements.txt
example/: 1DPETSc.py  2DCantilever.py  2DElastic.py  2DFault.py  2DFaultTest.py  2DGravity.py  3DFault.py  Integrate.py  Interpolate.py  LennaNode.py  Node.py  PETSc_vs_Scipy.py  PointInPolygon.py  TestGeometry.py  TestNode.py  icosa.gts
rbf/: #gpr.py#  Makefile  __init__.py  _lapack.py  _nodegen.py  _version.py  basis.py  bspline.c  bspline.html  bspline.pyx  dislocation.py  domain.py  elastic.py  fd.py  fdbuild.py  filter.py  formulation.py  gauss.py  geometry.bkp.pyx  geometry.html  geometry.pyx  gpr.py  gproc.py  gprocutil.py  halton.c  halton.html  halton.pyx  integrate.py  interpolant.py  interpolate.py  linalg.py  make.bat  manifold.py  mp.py  nodegen.py  nodes.py  nodes.pyx  normalize.py  poly.html  poly.pyx  (+10 more)
rbf/pde/: fd.py  (+20 more)
test/: diff_test.py  stencil_test.py  test_all.py  test_basis.py  test_domain.py  test_fd.py  test_gauss.py  test_geometry.py  test_gpr.py  test_gproc.py  test_interpolate.py  test_knn.py  test_linalg.py  test_nodes.py  test_qotree.py  test_sputils.py  test_stencil.py  test_utils.py
(+305 files in other folders)
