[build-system]
requires = ["setuptools", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
readme = "README.rst"
requires-python = ">=3.6"
license = {file = "LICENSE.txt"}
keywords = ["rbf", "pde"]
authors = [
  {name = "Trever Hines", email = "treverhines@gmail.com"}
]
maintainers = [
  {name = "Trever Hines", email = "treverhines@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research"
]

[project.optional-dependencies]
extras = [
  "scikit-sparse>=0.4.2"    
]

[project.urls]
Source = "https://github.com/treverhines/RBF"
Documentation = "https://rbf.readthedocs.io/en/latest"
